<resources>
    <string name="app_name" translatable="false">Vee</string>
    <string name="vee_logo" translatable="false">Vee Logo</string>
    <string name="nearest_gas_station">Nearest Gas Station</string>
    <string name="histories">%s Histories</string>
    <string name="app_name_small" translatable="false">vee</string>
    <string name="welcome">Have a safe driving, %1s</string>
    <string name="date_label">Date</string>
    <string name="odometer_label" translatable="false">Odometer</string>
    <string name="quantity_label">Quantity</string>
    <string name="price_label">Price</string>
    <string name="fill_ups_litre_label">Fill-ups Litre</string>
    <string name="total_price_label">Total Price</string>
    <string name="btn_add_activity">Add Activity</string>
    <string name="btn_edit_activity">Edit</string>
    <string name="btn_delete_activity">Delete</string>
    <string name="date_hint" translatable="false">01–05–2022</string>
    <string name="odometer_hint" translatable="false">10.722</string>
    <string name="fillups_hint" translatable="false">30</string>
    <string name="price_hint" translatable="false">229.500</string>
    <string name="litre_label" translatable="false">L</string>
    <string name="km_label" translatable="false">Km</string>
    <string name="rp_label" translatable="false">Rp</string>
    <string name="btn_profile">Profile</string>
    <string name="btn_theme">Dark Theme</string>
    <string name="btn_language">Language</string>
    <string name="btn_logout">Log Out</string>
    <string name="robo" translatable="false">Robo</string>
    <string name="robo_this_month_label">This %1s</string>
    <string name="robo_fillups_label">Fill-ups</string>
    <string name="robo_fillups_value">%1s</string>
    <string name="litre">Litre</string>
    <string name="robo_expenses_label">Expenses</string>
    <string name="rupiah_formatter">Rp %1s</string>
    <string name="robo_you_are_label">You are a</string>
    <string name="robo_category_label">Racer</string>
    <string name="title_home">Home</string>
    <string name="title_gas_station">Gas Station</string>
    <string name="title_activity">Activity</string>
    <string name="title_add_activity">Add Activity</string>
    <string name="title_profile">Profile</string>
    <string name="title_profile_detail">Profile Detail</string>
    <string name="title_theme">Dark Theme</string>
    <string name="title_notification">Notification</string>
    <string name="title_change_password">Change Password</string>
    <string name="notification">Notification</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="email_label" translatable="false">Email</string>
    <string name="email_hint" translatable="false">User@email.com</string>
    <string name="password_label">Password</string>
    <string name="password_hint">Minimal 6 characters</string>
    <string name="password_confirm_label">Password Confirmation</string>
    <string name="or_login_with">or login with</string>
    <string name="fab_add_activity" translatable="false">FAB Add Activity</string>
    <string name="welcome_screen_image">Welcome Screen Image</string>
    <string name="date_time_picker" translatable="false">Date Time Picker</string>
    <string name="first_name_placeholder" translatable="false">John</string>
    <string name="last_name_placeholder" translatable="false">Doe</string>
    <string name="change_password">Change Password</string>
    <string name="dummy" translatable="false">dummy</string>
    <string name="save_profile">Save Profile</string>
    <string name="retry">Retry</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="missing_permission">Permission Needed</string>
    <string name="missing_permission_description">The access to location is required to create an activity. You can re-enable it in settings.</string>
    <string name="yes">Yes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="new_password_label">New Password</string>
    <string name="current_password_label">Current Password</string>
    <string name="confirm_new_password_label">Confirm New Password</string>
    <string name="update_password">Update Password</string>
    <string name="language_theme">Language</string>
    <string name="authentication_theme">Authentication</string>
    <string name="signing_up_btn">Signing up…</string>
    <string name="loading_btn">Loading…</string>
    <string name="email_is_required_error">Email is required</string>
    <string name="email_is_not_valid_error">Email is not valid</string>
    <string name="password_is_required_error">Password is required</string>
    <string name="failed_google_sign_in">Google sign in failed</string>
    <string name="first_name_is_required_error">First name is required</string>
    <string name="last_name_is_required_error">Last name is required</string>
    <string name="password_confirm_not_match_error">Password confirmation is not match</string>
    <string name="positive_dialog_btn_text" translatable="false">OK</string>
    <string name="error" translatable="false">Error</string>
    <string name="success" translatable="false">Success</string>
    <string name="success_account_created">Your account has been created</string>
    <string name="login_failed">Login Failed</string>
    <string name="email_or_password_wrong">Email or Password is wrong</string>
    <string name="date_format" translatable="false">dd-MM-yyyy</string>
    <string name="month_format" translatable="false">yyyy-MM-</string>
    <string name="success_add_activity">Activity has been added</string>
    <string name="success_action_activity">The action activity successfully</string>
    <string name="error_add_activity">Activity has not been added</string>
    <string name="date_format_reversed" translatable="false">yyyy-MM-dd</string>
    <string name="location_not_found">Location is not found. Try Again</string>
    <string name="save_profile_btn">Saving…</string>
    <string name="success_update_profile">Update Profile Successful</string>
    <string name="success_update_password">Update Profile Successful</string>
    <string name="current_password_wrong">Current Password is wrong</string>
    <string name="change_password_title">Change Password</string>
    <string name="update_location">Update to current location</string>
    <string name="address_label">Address</string>
    <string name="month_label">Month</string>
    <string name="title_detail_activity">Detail Activity</string>
    <string name="location_not_available">Location not available</string>
    <string name="location_not_available_detail">Please check your location and GPS settings</string>
    <string name="btn_continue">Continue without location</string>
    <string name="no_data">No Data</string>
    <string name="no_nearest_gas_station">No nearest gas stations available in your area</string>
    <string name="gps_warning">You should turn on GPS to use this app</string>
    <string name="error_location">Location is not found. Try Again</string>
    <string name="no_activity">No Activity</string>
    <string name="add_activity_warning">Add new activity pressing (+) button</string>
    <string name="there_is_no_notification">There is no notification</string>
    <string name="forecast_next">Expense Forecast</string>
    <string name="forecast_average">Average Expense Forecast</string>
    <string name="create">Create</string>
    <string name="create_password">Create Password</string>
    <string name="success_create_password">Create Password Successful</string>
    <string name="error_create_password">Unable to create the password to this account</string>
    <string name="warning_battery_saver">The location might not accurate</string>
    <string name="battery_saver">Battery Saver</string>
    <string name="address_placeholder" translatable="false">Jl. Testing no 21</string>
    <string name="sign_up_error">The account has been created with this email, or check your connection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- Google Map API -->
</resources>