<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    tools:context=".ui.profile.ProfileDetailFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/nunito_semi_bold"
        android:labelFor="@+id/edt_first_name"
        android:text="@string/first_name_label"
        android:textColor="?android:textColorPrimary" />

    <EditText
        android:id="@+id/edt_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_background"
        android:fontFamily="@font/nunito_medium"
        android:hint="@string/first_name_placeholder"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="8dp"
        android:paddingTop="12dp"
        android:paddingEnd="8dp"
        android:paddingBottom="12dp"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/nunito_semi_bold"
        android:labelFor="@id/edt_last_name"
        android:text="@string/last_name_label"
        android:textColor="?android:textColorPrimary" />

    <EditText
        android:id="@+id/edt_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_background"
        android:fontFamily="@font/nunito_medium"
        android:hint="@string/last_name_placeholder"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="8dp"
        android:paddingTop="12dp"
        android:paddingEnd="8dp"
        android:paddingBottom="12dp"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/nunito_semi_bold"
        android:labelFor="@id/edt_email"
        android:text="@string/email_label"
        android:textColor="?android:textColorPrimary" />

    <id.vee.android.ui.customview.MyEmailEditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_background"
        android:enabled="false"
        android:fontFamily="@font/nunito_medium"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:paddingTop="12dp"
        android:paddingEnd="8dp"
        android:paddingBottom="12dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/nunito_semi_bold"
        android:labelFor="@+id/edt_password"
        android:text="@string/password_label"
        android:textColor="?android:textColorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <id.vee.android.ui.customview.MyPasswordEditText
            android:id="@+id/edt_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="3"
            android:background="@drawable/input_background"
            android:enabled="false"
            android:fontFamily="@font/nunito_medium"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingTop="12dp"
            android:paddingEnd="8dp"
            android:paddingBottom="12dp"
            android:text="@string/dummy" />

        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:text="@string/change"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_save_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/nunito_extra_bold"
        android:text="@string/save_profile"
        android:textAllCaps="false"
        android:textColor="@color/black" />
</LinearLayout>